# devmodel

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
devmodel-codegen/: Cargo.toml
devmodel-codegen/src/mysql/: column.rs  mod.rs  table.rs  types.rs
devmodel-core/: Cargo.toml
devmodel-core/examples/: basic.rs
devmodel-core/src/: domain.rs  edge.rs  extension.rs  field.rs  generator.rs  lib.rs  model.rs
devmodel-core/src/types/: mod.rs
devmodel-example/: Cargo.toml
devmodel-example/src/: main.rs
